# trusted_ke

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  README.md  core.html  index.html  params.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
2K_paper/: _modidx.py
EDA/: EDA_FAA_MaintNet.ipynb
FAA_data/: Maintenance_Text_data.csv
MaintNet_data/: Aviation_Abbreviation_Dataset.csv  Aviation_grammar_Dataset.csv
OMIN_dataset/gold_standard/: process_gs.ipynb
_proc/: index.ipynb
_proc/_docs/: robots.txt
coref/: README.md  coref.py
coref/coref_mt5/: README.md  checkpoint_1140000  coref_mt5_refomat.ipynb  coreference_decoder.ipynb  coreference_decoder.py  faa.jsonl  json_to_jsonl.ipynb  main.py  pyproject.toml  requirements.txt
data_processing/: pl-marker_faa.ipynb  reformat_FAA_conll_nltk.ipynb  reformat_FAA_conll_stanza.ipynb  reformat_conll_spacy.ipynb
envs/: reformat_conll2.yaml
evaluations/: README.md
gold_standard/: README.md  Rebel100Eval.xlsx  coref_gold.xlsx  create_eval_sheets.ipynb  nel_gold.xlsx  ner_overlap.ipynb  process_gs.ipynb  spacy_ner_gold.ipynb
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml  nel_eval.ipynb  ner_eval.ipynb  re_eval.ipynb  sidebar.yml
nel/: README.md
ner/: README.md  comparison_ner.csv  comparison_ner.ipynb  comparison_ner.py  comparison_ner.xlsx  view_ner_labels.ipynb
notebooks/: gold_standar_preparation.ipynb  gold_standard_preparation.ipynb
paper2k/: _modidx.py  core.py
re/: README.md
tool_results/: spacy_entitylinker.csv
trusted-ke/: _modidx.py
trusted_ke/: _modidx.py
(+2028 files in other folders)
