[project]
name = "coref_mt5"
version = "0.1.0"
description = "Coreference resolution using mT5"
authors = [
    {name = "Priscila Moreira", email = "pmoreira@nd.edu"},
]
dependencies = [
    "transformers",
    "torch>=2.3.1",
    "click>=8.1.7",
    "sentencepiece>=0.2.0",
    "protobuf>=5.27.2",
    "accelerate>=0.32.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
update-submodules = "git submodule update --init --recursive"

